CHATS_SIT/force-app/main/default/objects/T_INDIV_DDTN__c.object
<CustomObject>
    <fields>
        <fullName>AMT_DDTN_TOTAL__c</fullName>
        <description>Amount Paid</description>
        <label>Amount Paid</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CDE_FREQ_PAID__c</fullName>
        <description>How often is the amount paid?</description>
        <label>How often is the amount paid?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00325</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDE_SOURCE_VRFYD_DOCKET__c</fullName>
        <description>Docket How Verified</description>
        <label>Docket How Verified</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00796</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDE_SOURCE_VRFYD_DTDN__c</fullName>
        <description>Deduction How Verified</description>
        <label>Deduction How Verified</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00696</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDE_TYPE_VERIF__c</fullName>
        <description>Deduction Verified</description>
        <label>Deduction Verified</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00367</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDE_VRFYD_DOCKET__c</fullName>
        <description>Docket Verified</description>
        <label>Docket Verified</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00367</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DTE_BEGIN_EFFV__c</fullName>
        <label>Effective Begin Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DTE_END_EFFV__c</fullName>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IDN_CLIENT__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client ID</label>
        <referenceTo>T_SBSD_INDIV__c</referenceTo>
        <relationshipLabel>Child Support Deductions</relationshipLabel>
        <relationshipName>Child_Support_Deductions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IDN_EXTNL__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Ignore__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ignore</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NAM_PAYEE__c</fullName>
        <description>Payee Name</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>Payee Name</label>
        <length>71</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAM_RCVC__c</fullName>
        <description>Receiver&apos;s Name</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>Receiver&apos;s Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NBR_DOCKET__c</fullName>
        <description>Docket/Court Case #</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>Docket/Court Case #</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>Child Support Deduction</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>IDN_CLIENT__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Deduction ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Child Support Deductions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel> 
    <validationRules>
        <fullName>EndDateCannotBeGreaterThanStartDate</fullName>
        <active>true</active>
        <errorConditionFormula>DTE_END_EFFV__c  &lt;  DTE_BEGIN_EFFV__c</errorConditionFormula>
        <errorDisplayField>DTE_END_EFFV__c</errorDisplayField>
        <errorMessage>Effective End Date cannot be Prior to Effective Begin Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Req_CDE_SOURCE_VRFYD_DOCKET</fullName>
        <active>true</active>
        <description>CDE_SOURCE_VRFYD_DOCKET is required if CDE_VRFYD_DOCKET is &quot;Written Verification&quot;</description>
        <errorConditionFormula>AND(NOT( IDN_CLIENT__r.Is_Peak_Data__c ),ISBLANK(TEXT(CDE_SOURCE_VRFYD_DOCKET__c)) ,  ISPICKVAL(CDE_VRFYD_DOCKET__c , &apos;V&apos;) )</errorConditionFormula>
        <errorDisplayField>CDE_SOURCE_VRFYD_DOCKET__c</errorDisplayField>
        <errorMessage>Required if Docket Verified is &apos;Written Verification&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Source_How_Verified</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT( IDN_CLIENT__r.Is_Peak_Data__c ),ISPICKVAL(CDE_TYPE_VERIF__c, &apos;V&apos;) , ISPICKVAL(CDE_SOURCE_VRFYD_DTDN__c, &apos;&apos;)  )</errorConditionFormula>
        <errorDisplayField>CDE_SOURCE_VRFYD_DTDN__c</errorDisplayField>
        <errorMessage>A Value Is Required When Deduction Verified is Written Verification</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Warning_Message_before_saving_the_record</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT( IDN_CLIENT__r.Is_Peak_Data__c ),NOT(IDN_CLIENT__r.Is_Primary_Parent_Caretaker__c),IDN_CLIENT__r.Age__c &lt; VALUE( $Label.Teen_Parent_Age_Limit ),NOT(IDN_CLIENT__r.Has_Allowed_Relationship__c),NOT(Ignore__c))</errorConditionFormula>
        <errorMessage>This record may not be appropriate for this individual based on their age and/or relationship to the primary caretaker of this case(to continue saving please tick Ignore checkbox)</errorMessage>
    </validationRules>
</CustomObject>