CHATS_SIT/force-app/main/default/objects/T_INDIV_DDTN__c/validationRules/Req_CDE_SOURCE_VRFYD_DOCKET.validationRule-meta.xml
<ValidationRule>
    <fullName>Req_CDE_SOURCE_VRFYD_DOCKET</fullName>
    <active>true</active>
    <description>CDE_SOURCE_VRFYD_DOCKET is required if CDE_VRFYD_DOCKET is &quot;Written Verification&quot;</description>
    <errorConditionFormula>AND(NOT( IDN_CLIENT__r.Is_Peak_Data__c ),ISBLANK(TEXT(CDE_SOURCE_VRFYD_DOCKET__c)) ,  ISPICKVAL(CDE_VRFYD_DOCKET__c , &apos;V&apos;) )</errorConditionFormula>
    <errorDisplayField>CDE_SOURCE_VRFYD_DOCKET__c</errorDisplayField>
    <errorMessage>Required if Docket Verified is &apos;Written Verification&apos;</errorMessage>
</ValidationRule>