CHATS_SIT/force-app/main/default/objects/T_INDIV_DDTN__c/validationRules/Require_Source_How_Verified.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Source_How_Verified</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT( IDN_CLIENT__r.Is_Peak_Data__c ),ISPICKVAL(CDE_TYPE_VERIF__c, &apos;V&apos;) , ISPICKVAL(CDE_SOURCE_VRFYD_DTDN__c, &apos;&apos;)  )</errorConditionFormula>
    <errorDisplayField>CDE_SOURCE_VRFYD_DTDN__c</errorDisplayField>
    <errorMessage>A Value Is Required When Deduction Verified is Written Verification</errorMessage>
</ValidationRule>